--- a/interface/src/App.css
+++ b/interface/src/App.css
@@ -26,3 +26,14 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.TemperatureControl {
+  font-size: 80px;
+}
+
+.TemperatureControl button {
+  width: 100px;
+  height: 100px;
+  margin: 0;
+  padding: 0;
+}
